[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daplis"
version = "1.3.1"
description = "Data Analysis Package for LInoSpad"
authors = [{ name = "Sergei Kulkov", email = "sergei.kulkov23@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["timestamp", "analysis", "LinoSPAD2"]

dependencies = [
    "lmfit>=0.9.1",
    "matplotlib>=3.5.0",
    "numpy>=1.22.4",
    "pandas>=1.4.0",
    "pyarrow>=17.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.9.0",
    "tqdm>=4.67.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
daplis = ["*.txt", "*.csv"]

[project.urls]
Homepage = "https://github.com/rngKomorebi/daplis"